[gd_scene load_steps=33 format=2]

[ext_resource path="res://Resources/GUIpieces/DitherEndingScreen.png" type="Texture" id=1]
[ext_resource path="res://cursor.gd" type="Script" id=2]
[ext_resource path="res://Resources/GUIpieces/PersephoneOS.tres" type="Theme" id=3]
[ext_resource path="res://Resources/GUIpieces/SansNormalcyPixe.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/GUIpieces/cursor.png" type="Texture" id=5]
[ext_resource path="res://Resources/GUIpieces/cursorload.png" type="Texture" id=6]
[ext_resource path="res://Resources/GUIpieces/cursoribar.png" type="Texture" id=7]
[ext_resource path="res://Resources/GUIpieces/cursorLocked.png" type="Texture" id=8]
[ext_resource path="res://Resources/GUIpieces/Paper.png" type="Texture" id=9]
[ext_resource path="res://Resources/GUIpieces/buttonDown.png" type="Texture" id=10]
[ext_resource path="res://endingAndCredits.gd" type="Script" id=11]
[ext_resource path="res://Commandprompt.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=61]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=63]
resource_name = "Credits"
length = 40.0
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 40 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 243 ), Vector2( 16, -804 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=64]
resource_name = "Credits_CN"
length = 50.0
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 50 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 243 ), Vector2( 16, -1020 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DitherEndingScreen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 175 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Paper:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Credits:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 243 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Credits:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "loadIn"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 3.1, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DitherEndingScreen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 4.2, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 175 ), Vector2( 160, 175 ), Vector2( 160, 175 ), Vector2( 160, 65 ) ]
}

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 7, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 0, 9, 7, 9 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 7, 9, 7, 9 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 0, 18, 7, 9 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 7, 18, 7, 9 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 0, 27, 7, 9 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 7, 27, 7, 9 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 0, 36, 7, 9 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 7, 36, 7, 9 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 45, 7, 9 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 7, 45, 7, 9 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 0, 54, 7, 9 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 7, 54, 7, 9 )

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "loading",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "locked",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "ibar",
"speed": 5.0
} ]

[node name="world" type="Node2D"]
script = ExtResource( 11 )

[node name="DitherEndingScreen" type="Sprite" parent="."]
position = Vector2( 160, 175 )
texture = ExtResource( 1 )

[node name="Paper" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 200 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Paper"]
margin_left = -92.0
margin_top = -180.0
margin_right = 97.0
margin_bottom = -145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 61 )
text = "SCP Foundation
   Secure. Contain. Protect."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Paper"]
margin_left = -139.0
margin_top = -137.0
margin_right = 140.0
margin_bottom = 184.0
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaperScroller" type="TextureButton" parent="Paper"]
margin_left = -150.0
margin_top = -181.0
margin_right = 150.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Paper/PaperScroller"]
margin_left = 289.0
margin_top = -10.0
margin_right = 298.0
margin_bottom = -1.0
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 319.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Credits = SubResource( 63 )
anims/Credits_CN = SubResource( 64 )
anims/RESET = SubResource( 2 )
anims/loadIn = SubResource( 1 )

[node name="cursor" type="AnimatedSprite" parent="."]
position = Vector2( 226, 144 )
z_index = 6
frames = SubResource( 62 )
playing = true
centered = false
script = ExtResource( 2 )

[node name="Commandprompt" parent="." instance=ExtResource( 12 )]
visible = false
self_modulate = Color( 1, 1, 1, 0 )

[node name="Credits" type="RichTextLabel" parent="."]
visible = false
margin_left = 16.0
margin_top = 243.0
margin_right = 306.0
margin_bottom = 1443.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]由 Guaire 与 IronShears 写作
由 vxeov 翻译成中文

评论鸣谢

感谢JackalRelated、AnkleSwallower、SynthPanda、LAN与Rakaran对我的文章提供批评建议。 

特别鸣谢JackalRelated在游玩测试过程中对游戏的打磨。如果没有你，这份程序的bug恐怕会多出一倍不止。感谢！

图像授权

Cynthia SCP-8500图像：Hazel the Delta Rambler, WWOZ New Orleans, 1990，由Infrogmation创作，遵循CC-BY 2.0协议，经IronShears编辑

my_cat1.jpg：nullhing的猫，遵循CC-BY-SA 3.0协议，经IronShears编辑

my_cat2.jpg：seadragon1012的猫，遵循CC-BY-SA 3.0协议，经IronShears编辑

my_kot3.jpg：SCP-PL-KOT-J，Arcydziegiel著，遵循CC-BY-SA 3.0协议，经IronShears编辑

IGNORE.jpg：After poster session in AAPG Annual Convention 1997，由Channy Yun创作，遵循CC-BY 2.0协议，经IronShears编辑

YOUR.jpg：Stanford campus fog, Hoover Tower，由Dan Nguyen创作，遵循CC-BY 2.0协议，经IronShears编辑

DIRECTIVES.jpg：Higher Colleges of Technology - Dubai Men's，由Dennis S. Hurd创作，遵循公有领域1.0标记协议，经IronShears编辑

AND.jpg：My players Thursday night，由Benimoto创作，遵循CC-BY 2.0协议，经IronShears编辑

ONE_DAY.jpg：Jeni and Clara Kissing，由kafka4prez创作，遵循CC-BY 2.0协议，经IronShears编辑

y2k SCP logo：Y2KLogo.png，由etoisle创作，遵循CC-BY-SA 3.0协议，经IronShears编辑

音频授权

筆音クミ英语声库，由Cubialpha创作，可免费商用，创作者已确认兼容CC-BY-SA协议

Computer startup，由MrAuralization创作，遵循CC-BY 3.0协议

Error (Disaparaging Chimes)，由SilverIllusionist创作，遵循CC-BY 4.0协议

感谢Raddagher帮我修复音频循环播放问题！

使用的程序

Aseprite

Godot，遵循MIT协议

PicoCAD（用于创建“3D模型”），允许于软件内商用，创作者已确认兼容CC-BY-SA协议

OpenUTAU，遵循MIT协议

其他图像均由IronShears创作，遵循CC-BY-SA 3.0协议。

字体

页面字体：TimesNewPixel，由pentacom创作，属于公有领域

Shell字体：Dogica，由Roberto Mocci创作，遵循开放字体协议

小文件字体：m3x6，由Daniel Linssen创作，遵循CC-BY协议 

SCP基金会字体：Sans Normalcy，由SYWaves创作，遵循开放字体协议

中文字体：凤凰点阵体（VonwaonBitmap-12px, -16px），由Haoyu Qiu创作，遵循CC0协议

代码

色调切换：色调切换部分使用了由afk创作的两种材质，遵循CC0协议

其他代码均由IronShears编写，遵循CC-BY-SA 3.0协议。
[/center]"
text = "由 Guaire 与 IronShears 写作
由 vxeov 翻译成中文

评论鸣谢

感谢JackalRelated、AnkleSwallower、SynthPanda、LAN与Rakaran对我的文章提供批评建议。 

特别鸣谢JackalRelated在游玩测试过程中对游戏的打磨。如果没有你，这份程序的bug恐怕会多出一倍不止。感谢！

图像授权

Cynthia SCP-8500图像：Hazel the Delta Rambler, WWOZ New Orleans, 1990，由Infrogmation创作，遵循CC-BY 2.0协议，经IronShears编辑

my_cat1.jpg：nullhing的猫，遵循CC-BY-SA 3.0协议，经IronShears编辑

my_cat2.jpg：seadragon1012的猫，遵循CC-BY-SA 3.0协议，经IronShears编辑

my_kot3.jpg：SCP-PL-KOT-J，Arcydziegiel著，遵循CC-BY-SA 3.0协议，经IronShears编辑

IGNORE.jpg：After poster session in AAPG Annual Convention 1997，由Channy Yun创作，遵循CC-BY 2.0协议，经IronShears编辑

YOUR.jpg：Stanford campus fog, Hoover Tower，由Dan Nguyen创作，遵循CC-BY 2.0协议，经IronShears编辑

DIRECTIVES.jpg：Higher Colleges of Technology - Dubai Men's，由Dennis S. Hurd创作，遵循公有领域1.0标记协议，经IronShears编辑

AND.jpg：My players Thursday night，由Benimoto创作，遵循CC-BY 2.0协议，经IronShears编辑

ONE_DAY.jpg：Jeni and Clara Kissing，由kafka4prez创作，遵循CC-BY 2.0协议，经IronShears编辑

y2k SCP logo：Y2KLogo.png，由etoisle创作，遵循CC-BY-SA 3.0协议，经IronShears编辑

音频授权

筆音クミ英语声库，由Cubialpha创作，可免费商用，创作者已确认兼容CC-BY-SA协议

Computer startup，由MrAuralization创作，遵循CC-BY 3.0协议

Error (Disaparaging Chimes)，由SilverIllusionist创作，遵循CC-BY 4.0协议

感谢Raddagher帮我修复音频循环播放问题！

使用的程序

Aseprite

Godot，遵循MIT协议

PicoCAD（用于创建“3D模型”），允许于软件内商用，创作者已确认兼容CC-BY-SA协议

OpenUTAU，遵循MIT协议

其他图像均由IronShears创作，遵循CC-BY-SA 3.0协议。

字体

页面字体：TimesNewPixel，由pentacom创作，属于公有领域

Shell字体：Dogica，由Roberto Mocci创作，遵循开放字体协议

小文件字体：m3x6，由Daniel Linssen创作，遵循CC-BY协议 

SCP基金会字体：Sans Normalcy，由SYWaves创作，遵循开放字体协议

中文字体：凤凰点阵体（VonwaonBitmap-12px, -16px），由Haoyu Qiu创作，遵循CC0协议

代码

色调切换：色调切换部分使用了由afk创作的两种材质，遵循CC0协议

其他代码均由IronShears编写，遵循CC-BY-SA 3.0协议。
"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Paper/PaperScroller" to="." method="_on_PaperScroller_button_down"]
[connection signal="button_up" from="Paper/PaperScroller" to="." method="_on_PaperScroller_button_up"]
[connection signal="pressed" from="Paper/PaperScroller/TextureButton" to="." method="_on_Close_pressed"]
[connection signal="option_pressed" from="Commandprompt" to="." method="_on_Commandprompt_option_pressed"]
